<resources>
    <string name="app_name">wnews</string>
    <string name="first_name_placeholder">"First Name (Recomended)"</string>
    <string name="second_name_placeholder">"Last Name (Recomended)"</string>
    <string name="login_button">LOG IN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="tyc">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="empty_validation">This field cannot be empty.</string>
    <string name="valid_email_validation">This field cannot be empty.</string>
    <string name="wolox_page">"https://www.wolox.com.ar"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed_login">Invalid Credentials</string>
    <string name="no_internet">Please, verify your internet connection and try again.</string>
    <string name="tab1">News</string>
    <string name="tab2">Profile</string>
    <string name="e401">Unauthorized</string>
    <string name="AccessToken">Access-Token</string>
    <string name="sharedPrefs">sharedPrefs</string>
    <string name="Uid">Uid</string>
    <string name="Client">Client</string>
    <string name="Id">Id</string>




</resources>