<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login_cover"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/wolox_logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginStart="@dimen/logo_marginStart"
        android:layout_marginTop="@dimen/logo_marginTop"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@mipmap/wolox_logo"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:id="@+id/firstName"
        android:hint="@string/first_name_placeholder"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/first_name_margin_top"
        android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wolox_logo"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/second_name"
        android:hint="@string/second_name_placeholder"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
        android:layout_marginTop="@dimen/login_button_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:text="@string/signup_button"
        android:background="@color/Scooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_margin_horizontal"
        android:layout_marginTop="@dimen/signup_button_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:textAllCaps="false"
        android:background="@null"
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/footer_margin_bottom"
        android:ems="18"
        android:text="@string/tyc"
        android:textColor="#989898"
        android:textSize="@dimen/footer_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>